--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,15 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Robo School</title>
     </head>
     <body>
-        <h1>Привет мир</h1>
+        <%=_.template(require('./../includes/header.html').default)(data)%>
     </body>
 </html>
