--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,1 +1,19 @@
-<h1>Привет мир</h1>
+<header class="fixed-top">
+    <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center">
+            <div>
+                <a class="header__logo" href="#">ROBO.SCHOOL</a>
+            </div>
+            <div>
+                <nav class="header__nav">
+                    <ul class="d-flex">
+                        <li><a href="#">О школе</a></li>
+                        <li><a href="#">Тренеры</a></li>
+                        <li><a href="#">Стоимость</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div><span class="header__tel"> +7 800 000 11 22 </span></div>
+        </div>
+    </div>
+</header>
