--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <%=_.template(require('./../includes/header.html').default)(data)%>
+        <%=_.template(require('./../includes/topic.html').default)(data)%>
     </body>
 </html>
