add section institutions

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -8,5 +8,6 @@
     <body>
         <%=_.template(require('./../includes/header.html').default)(data)%>
         <%=_.template(require('./../includes/topic.html').default)(data)%>
+        <%=_.template(require('./../includes/institutions.html').default)(data)%>
     </body>
 </html>
