--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,8 @@
 header {
     padding-top: 30px;
+    padding-bottom: 30px;
     background: #141024;
+    color: #ffffff;
     ul {
         list-style-type: none;
         margin-bottom: 0;
