--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,9 +4,10 @@
 @import 'button';
 @import 'header';
 @import 'topic';
+@import 'institutions';
 body {
     font-family: 'Jost', sans-serif;
-    color: #fff;
+    color: #141024;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
