--- a/src/scss/press.scss
+++ b/src/scss/press.scss
@@ -4,5 +4,25 @@
         font-weight: 600;
     }
     &.p {
+        font-size: 24px;
+        line-height: 48px;
+    }
+    &.p-small {
+        color: rgba(20, 16, 36, 0.7);
+        font-size: 18px;
+        font-weight: 400;
+        text-align: left;
+        line-height: 30px;
+    }
+    &.span {
+        font-size: 30px;
+        font-weight: 600;
+    }
+    &.span-red {
+        color: #d52027;
+        font-size: 70px;
+        font-weight: 600;
+        text-align: left;
+        line-height: 112px;
     }
 }
