add section info-well

--- a/src/html/includes/institutions.html
+++ b/src/html/includes/institutions.html
@@ -1,7 +1,7 @@
-<section class="institutions pt-6 pb-6">
+<section class="institutions pt-8 pb-8">
     <div class="container-fluid container-xl">
         <div class="col-7">
-            <div class="institutions__title-wrapper">
+            <div class="institutions__title-wrapper mb-7">
                 <div class="institutions__title">
                     <p class="press p">
                         <span class="press span">Robo School</span> – учреждение
