--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,10 +5,11 @@
 @import 'header';
 @import 'topic';
 @import 'institutions';
+@import 'info-well';
 body {
     font-family: 'Jost', sans-serif;
     color: #141024;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     font-weight: 400;
     line-height: 160%;
