--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -9,5 +9,6 @@
         <%=_.template(require('./../includes/header.html').default)(data)%>
         <%=_.template(require('./../includes/topic.html').default)(data)%>
         <%=_.template(require('./../includes/institutions.html').default)(data)%>
+        <%=_.template(require('./../includes/info-well.html').default)(data)%>
     </body>
 </html>
