add section coaches

--- a/src/html/includes/info-well.html
+++ b/src/html/includes/info-well.html
@@ -1,13 +1,13 @@
 <section class="info-well pt-7 pb-7">
     <div class="container-fluid container-xl">
         <div class="col-7">
-            <div class="info-well__wrapper mb-7">
+            <div class="mb-7">
                 <div class="info-well__title">
                     <h2 class="press h2">Что вы получите после курса</h2>
                 </div>
             </div>
         </div>
-        <div class="info-well__wrapper">
+        <div>
             <div class="info-well__body">
                 <div class="row">
                     <div class="col-4">
