--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -10,5 +10,6 @@
         <%=_.template(require('./../includes/topic.html').default)(data)%>
         <%=_.template(require('./../includes/institutions.html').default)(data)%>
         <%=_.template(require('./../includes/info-well.html').default)(data)%>
+        <%=_.template(require('./../includes/coaches.html').default)(data)%>
     </body>
 </html>
