--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @import 'topic';
 @import 'institutions';
 @import 'info-well';
+@import 'coaches';
 body {
     font-family: 'Jost', sans-serif;
     color: #141024;
